--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 꼭 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center">정보처리기사 따기</div>
+        <div class="bucket img1 center done">정보처리기사 따기</div>
         <div class="bucket img2 center">2-3키로 빼기</div>
         <div class="bucket img1 center">돈 모으기(600 목표)</div>
         <div class="bucket img2 center">하루에 코딩공부 두시간씩 하기</div>
